fix service bugs